--- a/README.org
+++ b/README.org
@@ -11,3 +11,6 @@
 
 * *Application URL*
 - https://word-test-916dc.web.app/
+
+* Image
+[[https://raw.githubusercontent.com/taiseiyo/word-test/main/screenshot.png]]
